# AC

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.html  assaultcube.sh  server.sh
Release/: .gitignore
doxygen/: Doxyfile
source/doxygen/: Doxyfile
source/src/: OLD_Makefile  audiomanager.cpp  audiomanager.h  client.cpp  client.h  clientgame.cpp  clientgame.h  clients2c.cpp  clients2c.h  command.cpp  command.h  common.h  console.cpp  console.h  crypto.cpp  crypto.h  crypto_tools.h  cube.h  docs.cpp  docs.h  editing.cpp  editing.h  entities.cpp  entities.h  entity.h  geom.cpp  geom.h  hudgun.h  i18n.cpp  i18n.h  jpegenc.cpp  jpegenc.h  log.cpp  log.h  main.cpp  main.h  md2.h  md3.h  menus.cpp  menus.h  (+67 more)
source/src/bot/: ac_bot.cpp  bot.h  bot_ai.cpp  bot_util.cpp  bot_waypoint.cpp  bot_waypoint.h  botmanager.cpp
src/: audiomanager.h  client.h  clientgame.cpp  clientgame.h  clients2c.h  common.h  console.cpp  console.h  crypto.cpp  crypto.h  docs.cpp  editing.cpp  editing.h  entities.h  geom.cpp  geom.h  i18n.cpp  i18n.h  jpegenc.cpp  log.cpp  log.h  main.cpp  menus.h  model.h  physics.h  platform.h  protocol.cpp  protocol.h  rendercubes.cpp  rendergl.cpp  rendergl.h  renderhud.cpp  renderhud.h  rendermodel.cpp  rendermodel.h  renderparticles.h  rendertext.cpp  rendertext.h  scoreboard.cpp  scoreboard.h  (+30 more)
src/bot/: ac_bot.h  ac_bot_ai.cpp  bot.cpp  bot_util.h
